# bigdata-course-spark

./: 00-eda.ipynb  01-clusterization.ipynb  Dockerfile  docker-compose.yml  install_spark.sh  pyproject.toml  requirements.txt
src/: 00-dataset_to_db.py
